Fixed home page layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ nav ul {
 
 #landing_motion {
   width: 500px;
-  height: auto;
+  height: 500px;
 }
 
 /* About page style */
